k8s_manifests/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.akos-demo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
    - host: influxdb.akos-demo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: influxdb-influxdb2
                port:
                  number: 80
    - host: mqtt.akos-demo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mqtt
                port:
                  number: 80
